--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Khand&family=Mulish:wght@700&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poiret+One&family=Rajdhani&family=Ramabhadra&family=Roboto:wght@100;300;400&family=Voltaire&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Khand&family=Mulish:wght@700&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poiret+One&family=Poppins:wght@300;400&family=Rajdhani&family=Ramabhadra&family=Roboto:wght@100;300;400&family=Voltaire&display=swap"
       rel="stylesheet"
     />
     <!--
